Update Bab III Bab IV

--- a/Bab III - Analisis-Masalah.tex
+++ b/Bab III - Analisis-Masalah.tex
@@ -66,10 +66,10 @@ Alur tata kelola AE terbagi menjadi lima tahap, dengan detail sebagai berikut:
   Semua progres dipantau melalui excel \textit{tracker} untuk memastikan ketercapaian setiap aktivitas pada tahapan \textit{ideation}. 
   Tahap \textit{ideation} ini memastikan seluruh rencana perubahan telah tervalidasi sejak awal sebelum masuk ke tahap \textit{risk and impact}. 
   Gambar \ref{gambar:asis_ideation} menunjukkan tahapan \textit{ideation} saat ini.\\
-  \begin{figure}[t] % pilihan opsi yang disarankan: t = top, b = bottom, h = here
+  \begin{figure}[H] % pilihan opsi yang disarankan: t = top, b = bottom, h = here
     \centering
     \captionsetup{justification=centering}
-        \includegraphics[width=1\textwidth]{image/ideation2.png}
+        \includegraphics[width=0.9\textwidth]{image/ideation2.png}
     \caption{Tahapan \textit{Ideation} Saat Ini}
     \label{gambar:asis_ideation}
   \end{figure}
@@ -84,7 +84,7 @@ Alur tata kelola AE terbagi menjadi lima tahap, dengan detail sebagai berikut:
   Kegiatan ini berjalan secara paralel dengan langkah \textit{Cloud Infrastructure} dan \textit{IT Security} dalam membuat rancangan awal (\textit{draft}) arsitektur infrastruktur dan keamanan pada \textit{platform} SAP LeanIX.. 
   Tahapan \textit{Risk and Impact} bertujuan agar semua risiko potensial serta dampak perubahan dapat teridentifikasi dan dianalisis sebelum memasuki tahap \textit{development}. 
   Gambar \ref{gambar:asis_riskImpact} menunjukkan tahapan \textit{risk and impact} saat ini.\\
-  \begin{figure}[t] % pilihan opsi yang disarankan: t = top, b = bottom, h = here
+  \begin{figure}[H] % pilihan opsi yang disarankan: t = top, b = bottom, h = here
     \centering
     \captionsetup{justification=centering}
         \includegraphics[width=0.7\textwidth]{image/riskImpact2.png}
@@ -101,13 +101,13 @@ Alur tata kelola AE terbagi menjadi lima tahap, dengan detail sebagai berikut:
   Selain itu \textit{Engineering Manager}  melanjutkan artefak aplikasi dan data. 
   Pada \textit{minimum impact}, pembaruan artefak dilakukan tanpa konsultasi dengan \textit{Enterprise Architect} dan tanpa melakukan \textit{EA Project Monitoring}.\\
 
-  Selama proses \textit {development}, pembaruan artefak dapat dilakukan secara paralel sesuai kebutuhan. 
+  Selama proses \textit{development}, pembaruan artefak dapat dilakukan secara paralel sesuai kebutuhan. 
   Sebelum transisi ke tahap \textit{UAT and Go-Live}, \textit{Enterprise Architect} akan melakukan \textit{review} kelengkapan \textit{EA Project Monitoring} serta memastikan seluruh \textit{checklist} terpenuhi. 
   Gambar \ref{gambar:asis_dev} menunjukkan tahapan \textit{development} saat ini.\\
-  \begin{figure}[t] % pilihan opsi yang disarankan: t = top, b = bottom, h = here
+  \begin{figure}[H] % pilihan opsi yang disarankan: t = top, b = bottom, h = here
     \centering
     \captionsetup{justification=centering}
-        \includegraphics[width=1\textwidth]{image/dev2.png}
+        \includegraphics[width=0.9\textwidth]{image/dev2.png}
     \caption{Tahapan \textit{Development} Saat Ini}
     \label{gambar:asis_dev}
   \end{figure}
@@ -123,10 +123,10 @@ Alur tata kelola AE terbagi menjadi lima tahap, dengan detail sebagai berikut:
   Setelah artefak final, maka dilanjutkan pengecekan penyelesaian artefak saat \textit{Change Advisory Board} (CAB) jika perubahan bersifat \textit{high impact}, sedangkan artefak akan di cek saat \textit{Bi-weekly Architecture Change Review} jika perubahannya bersifat \textit{minimum impact}. 
   Setelah seluruh proses verifikasi dilalui dan artefak dinyatakan lengkap, status perubahan yang \textit{minimum impact} akan ditandai "\textit{complete}" pada \textit{tracker}, sedangkan untuk \textit{high impact} diterima dalam \textit{Request for Change} (RFC) yang kemudian dapat dilanjutkan ke produksi. 
   Gambar \ref{gambar:asis_UAT} menunjukkan tahapan \textit{UAT and Go-Live} saat ini.\\
-  \begin{figure}[t] % pilihan opsi yang disarankan: t = top, b = bottom, h = here
+  \begin{figure}[H] % pilihan opsi yang disarankan: t = top, b = bottom, h = here
     \centering
     \captionsetup{justification=centering}
-        \includegraphics[width=1\textwidth]{image/uat2.png}
+        \includegraphics[width=0.9\textwidth]{image/uat2.png}
     \caption{Tahapan \textit{UAT and Go-Live} Saat Ini}
     \label{gambar:asis_UAT}
   \end{figure}
@@ -140,7 +140,7 @@ Alur tata kelola AE terbagi menjadi lima tahap, dengan detail sebagai berikut:
   \textit{Enterprise Architect} akan memastikan seluruh \textit{checklist} sudah lengkap sebelum \textit{closing project}. 
   Selain itu, \textit{Enterprise Architect} memberikan konsultasi arsitektural selama periode \textit{hypercare} untuk membantu verifikasi artefak. 
   Gambar \ref{gambar:asis_hypercare} menunjukkan tahapan \textit{hypercare} saat ini.\\
-  \begin{figure}[t] % pilihan opsi yang disarankan: t = top, b = bottom, h = here
+  \begin{figure}[H] % pilihan opsi yang disarankan: t = top, b = bottom, h = here
     \centering
     \captionsetup{justification=centering}
         \includegraphics[width=0.7\textwidth]{image/hyper2.png}
