--- a/Bab II - Studi-Literatur.tex
+++ b/Bab II - Studi-Literatur.tex
@@ -200,7 +200,7 @@ Penelitian ini berfokus kepada komponen-komponen yang harus ada dalam tata kelol
 dan penggunaan repositori AE untuk mengelola artefak dan keputusan arsitektur.
 Penelitian ini mennyajikan gambaran mengenai bagaimana komponen-komponen tersebut saling berkaitan dan membentuk sistem tata kelola yang konsisten.
 
-Namum, penelitian ini masih dominan bersifat konseptual dengan konteks implementasi yang spesifik, sehingga belum dikaitkan secara eksplisit dengan \textit{Enterprise Architecture Maturity Model} dan belum dievaluasi pada industri.
+Namun, penelitian ini masih dominan bersifat konseptual dengan konteks implementasi yang spesifik, sehingga belum dikaitkan secara eksplisit dengan \textit{Enterprise Architecture Maturity Model} dan belum dievaluasi pada industri.
 
 \section{Kerangka Konseptual}
 Arsitektur \textit{Enterprise} (AE), Tata Kelola AE, dan \textit{Enterprise Architecture Maturity Model} merupakan tiga komponen yang saling berkaitan erat dalam pengelolaan arsitektur perusahaan.
