--- a/Bab V - Rencana-Selanjutnya.tex
+++ b/Bab V - Rencana-Selanjutnya.tex
@@ -3,9 +3,16 @@
 % ==========================================
 \chapter{RENCANA SELANJUTNYA}
 \label{chap:rencana-selanjutnya}
-Jelaskan secara detail langkah-langkah rencana selanjutnya, hal-hal yang diperlukan atau akan disiapkan, dan risiko dan mitigasinya, yang meliputi:
-\begin{enumerate}
-\item	Rencana implementasi, termasuk alat dan bahan yang diperlukan, lingkungan, konfigurasi, biaya, dan sebagainya.
-\item	Desain pengujian dan evaluasi, misalnya metode verifikasi dan validasi.
-\item	Analisis risiko dan mitigasi, misalnya tindakan selanjutnya jika ada yang tidak berjalan sesuai rencana.
-\end{enumerate}
+\section{\textit{Timeline} Implementasi}
+Tahapan dalam implementasi tugas akhir ini dilakukan selama 14 minggu. 
+\textit{timeline} disusun dengan mempertimbangkan aktivitas setiap tahap dan kesesuaian dengan jadwal kalender akademik.
+Tabel \ref{tbl:timeline} menunjukkan detail rencana \textit{implementasi} selama 14 minggu. \\
+\input{table/tabelTimeline.tex}
+
+\section{Desain Pengujian dan Evaluasi}
+xxx
+
+\section{Analisis Risiko dan Mitigasi}
+Pada pelaksanaan tugas akhir, terdapat beberapa potensi risiko yang mungkin dapat memengaruhi keberhasilan implementasi.
+Tabel \ref{tbl:resiko-mitigasi} menunjukkan risiko-risiko yang mungkin terjadi dalam pengerjaan tugas akhir ini.
+\input{table/tabelRisiko.tex}
