--- a/daftar-pustaka.bib
+++ b/daftar-pustaka.bib
@@ -1,3 +1,12 @@
+@inproceedings{absari2022design,
+  title={Design science research methodology concept and its application in the development of online community communication system for selotapak village},
+  author={Absari, Dhiani Tresna and Djunaidy, Arif and Susanto, Tony Dwi},
+  booktitle={2022 9th International Conference on Information Technology, Computer, and Electrical Engineering (ICITACEE)},
+  pages={236--241},
+  year={2022},
+  organization={IEEE}
+}
+
 @article{tamm2011does,
   title={How does enterprise architecture add value to organisations?},
   author={Tamm, Toomas and Seddon, Peter B and Shanks, Graeme and Reynolds, Peter},
