--- a/table/tabelFungsional.tex
+++ b/table/tabelFungsional.tex
@@ -38,30 +38,22 @@ Kewajiban pada Tahap \textit{Ideation} &
 \textit{EA Impact Analysis} wajib dilakukan sejak tahap \textit{ideation} sebelum URS masuk ke fase \textit{Risk and Impact}. \\
 
 KF-03 &
-Parameter \textit{Impact} Level &
-Proses harus menyediakan parameter objektif dalam menentukan kategori \textit{high impact} atau \textit{minimum impact}. \\
-
-KF-04 &
-Konsultasi Formal dengan \textit{Enterprise Architect} &
-Inisiatif bernilai \textit{high impact} harus melalui sesi konsultasi formal dengan \textit{Enterprise Architect} sebelum diteruskan ke tahap berikutnya. \\
-
-KF-05 &
 Pencatatan di SAP LeanIX &
 Hasil \textit{EA Impact Analysis} wajib dicatat pada SAP LeanIX sebagai artefak arsitektur yang terdokumentasi. \\
 
-KF-07 &
+KF-04 &
 Validasi Kelengkapan &
 Proses harus memverifikasi kelengkapan \textit{EA Impact Analysis} sebelum URS dapat masuk ke tahap \textit{Risk and Impact}. \\
 
-KF-08 &
+KF-05 &
 Mekanisme Revisi dan \textit{Tracking} &
-Proses harus menyediakan fitur pencatatan revisi, histori perubahan, dan jejak audit untuk setiap penyuntingan. \\
+Proses harus menyediakan pencatatan revisi dan histori perubahan. \\
 
-KF-09 &
+KF-06 &
 Sinkronisasi Artefak &
 Proses harus menyinkronkan dampak perubahan terhadap artefak \textit{current state} dan \textit{desired state} agar tetap konsisten. \\
 
-KF-10 &
+KF-07 &
 Pelaporan Dampak Arsitektural &
 Proses harus menghasilkan ringkasan dampak arsitektural sebagai bagian dari input untuk \textit{Risk and Impact} hingga proses implementasi. \\
 
